patches-dsl/tests/fixtures/errors/str_param_passed_float.patches
template pick(port: str) {
    in:  inp
    out: out
    module osc : Osc
    osc.<port> -> $.out
    $.inp -> osc.voct
}
patch {
    module t : pick(port: 3.14)
    module out : AudioOut
    out.in_left <- t.out
}
